--- a/conceptos.html
+++ b/conceptos.html
@@ -126,7 +126,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h5 mb-0 text-gray-900">Conceptos de derechos de autor, privacidad y protección de datos</h1>
+                        <h1 class="h5 mb-0 text-gray-900">1.1 Conceptos de derechos de autor, privacidad y protección de datos</h1>
                     </div>
 
                     <!-- Content Row -->
