--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                         <a class="collapse-item" href="conceptos.html">Conceptos</a>
                         <a class="collapse-item" href="leyes.html">Leyes</a>
                         <a class="collapse-item" href="tramites.html">Trámites y requisitos</a>
-                        <a class="collapse-item" href="tramites.html">Proceso de trámite</a>
+                        <a class="collapse-item" href="proceso.html">Proceso de trámite</a>
+                        <a class="collapse-item" href="elaboracion.html">Proceso de elaboración de avisos de privacidad</a>
                     </div>
                 </div>
             </li>
