--- a/elaboracion.html
+++ b/elaboracion.html
@@ -20,9 +20,9 @@
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
-     <style>
-        .card-body p {
-            text-align: justify; /* Justificar el texto en los párrafos de las tarjetas */
+    <style>
+        ol p {
+            text-align: justify; /* Justificar el texto dentro de los párrafos en la lista numerada */
         }
     </style>
 
@@ -103,7 +103,8 @@
             <li class="nav-item active">
                 <a class="nav-link" href="conclusiones.html">
                     <i class=""></i>
-                    <span>Conclusiones</span></a>
+                    <span>Conclusiones</span>
+                </a>
             </li>
 
             <!-- Sidebar Toggler (Sidebar) -->
@@ -141,58 +142,67 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h5 mb-0 text-gray-900">1.1 Conceptos de derechos de autor, privacidad y protección de datos</h1>
+                        <h1 class="h5 mb-0 text-gray-900">1.5 Proceso de elaboración de avisos de privacidad</h1>
                     </div>
 
                     <!-- Content Row -->
                     <div class="row">
-                        <div class="col-lg-6 mb-4">
-                            <!-- Illustrations -->
-                            <div class="card shadow mb-1">
+                        <div class="col-lg-12 mb-4">
+                            <!-- Process Steps -->
+                            <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">DERECHOS DE AUTOR</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Pasos para la Elaboración de Avisos de Privacidad</h6>
                                 </div>
                                 <div class="card-body">
-                                    <div class="text-center">
-                                        <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem; height: 14.5rem;"
-                                            src="img/derechos-autor.svg" alt="...">
+                                    <div class="text-center mb-4">
+                                        <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem; height: 14.5rem;" src="img/aviso-privacidad.svg" alt="Aviso de Privacidad">
                                     </div>
-                                    <p>Los derechos de autor son un conjunto de leyes que protegen las obras creativas, como libros, música, software y otras expresiones artísticas. 
-                                        Los autores y creadores obtienen el derecho exclusivo de usar, distribuir y reproducir su obra, generalmente por un periodo limitado.</p>
-                                </div>
-                            </div>
-                        </div>
-                    
-                        <div class="col-lg-6 mb-4">
-                            <!-- Illustrations -->
-                            <div class="card shadow mb-1">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">PRIVACIDAD</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="text-center">
-                                        <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem; height: 14.5rem;"
-                                            src="img/Privacy policy-pana.svg" alt="...">
-                                    </div>
-                                    <p>La privacidad se refiere al derecho de las personas a controlar la información personal que comparten y cómo se utiliza. La legislación sobre 
-                                        privacidad tiene como objetivo proteger la información personal contra el uso indebido y asegurar que se maneje de manera responsable. </p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-6 mb-4">
-                            <!-- Illustrations -->
-                            <div class="card shadow mb-1">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">PROTECCIÓN DE DATOS</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="text-center">
-                                        <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem; height: 14.5rem;"
-                                            src="img/datos.jpg" alt="...">
-                                    </div>
-                                    <p>La protección de datos abarca las medidas y regulaciones destinadas a proteger la información personal almacenada y procesada por organizaciones. 
-                                        Incluye aspectos como la recopilación, almacenamiento, procesamiento y transferencia de datos personales. Las leyes de protección de datos imponen obligaciones a las organizaciones para garantizar la seguridad y confidencialidad de la información personal. </p>
+                                    <ol>
+                                        <li>
+                                            <strong>Identificación de Datos Personales:</strong>
+                                            <p>Identifica los datos personales que recolectarás y manejarás. Crea un inventario de estos datos para tener claro qué tipo de información estás recopilando.</p>
+                                        </li>
+                                        <li>
+                                            <strong>Finalidad del Tratamiento de Datos:</strong>
+                                            <p>Define claramente las finalidades para las cuales utilizarás los datos personales. Asegúrate de que estas finalidades sean específicas y legítimas.</p>
+                                        </li>
+                                        <li>
+                                            <strong>Consentimiento del Titular:</strong>
+                                            <p>Obtén el consentimiento del titular de los datos de manera explícita. Documenta este consentimiento adecuadamente.</p>
+                                        </li>
+                                        <li>
+                                            <strong>Derechos del Titular:</strong>
+                                            <p>Establece y comunica claramente los derechos que tienen los titulares sobre sus datos personales, incluyendo acceso, rectificación, cancelación y oposición (ARCO).</p>
+                                        </li>
+                                        <li>
+                                            <strong>Transferencia de Datos:</strong>
+                                            <p>Indica si compartirás los datos personales con terceros y bajo qué circunstancias. Asegúrate de que estas transferencias cumplan con las normativas aplicables.</p>
+                                        </li>
+                                        <li>
+                                            <strong>Medidas de Seguridad:</strong>
+                                            <p>Implementa medidas de seguridad adecuadas para proteger los datos personales contra accesos no autorizados, pérdida o destrucción.</p>
+                                        </li>
+                                        <li>
+                                            <strong>Responsable del Tratamiento:</strong>
+                                            <p>Identifica claramente quién es el responsable del tratamiento de los datos personales y proporciona información de contacto.</p>
+                                        </li>
+                                        <li>
+                                            <strong>Elaboración del Aviso de Privacidad:</strong>
+                                            <p>Redacta el aviso de privacidad de manera clara y accesible, incluyendo todos los elementos anteriormente mencionados.</p>
+                                        </li>
+                                        <li>
+                                            <strong>Publicación y Difusión:</strong>
+                                            <p>Asegúrate de que el aviso de privacidad esté fácilmente disponible para los titulares de los datos, y mantenlo actualizado.</p>
+                                        </li>
+                                        <li>
+                                            <strong>Capacitación y Concienciación:</strong>
+                                            <p>Capacita a tu equipo sobre la importancia de la protección de datos personales y asegúrate de que comprendan sus responsabilidades.</p>
+                                        </li>
+                                        <li>
+                                            <strong>Monitoreo y Cumplimiento:</strong>
+                                            <p>Realiza auditorías periódicas para asegurar el cumplimiento del aviso de privacidad y mejora continuamente tus prácticas de protección de datos.</p>
+                                        </li>
+                                    </ol>
                                 </div>
                             </div>
                         </div>
