--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
-                    <i class=""></i>
-                    <span>Portada</span></a>
+                    <i class="fas fa-tachometer-alt"></i>
+                    <span>Portada</span>
+                </a>
             </li>
 
             <!-- Divider -->
@@ -58,8 +59,7 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
                     <span>Legislación Informática</span>
                 </a>
@@ -69,27 +69,35 @@
                         <a class="collapse-item" href="leyes.html">Leyes</a>
                         <a class="collapse-item" href="tramites.html">Trámites y requisitos</a>
                         <a class="collapse-item" href="proceso.html">Proceso de trámite</a>
-                        <a class="collapse-item" href="elaboracion.html">Proceso de elaboración de avisos de privacidad</a>
+                        <a class="collapse-item" href="elaboracion.html">Avisos de privacidad</a>
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Ética y delitos informática</span>
                 </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
+                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="utilities-color.html">Conceptos</a>
-                        <a class="collapse-item" href="utilities-border.html">Características</a>
-                        <a class="collapse-item" href="utilities-animation.html">Aspectos legales</a>
-                        <a class="collapse-item" href="utilities-other.html">Proceso de elaboración de códigos</a>
+                        <a class="collapse-item" href="definiciones.html">Conceptos</a>
+                        <a class="collapse-item" href="caracteristicas.html">Características</a>
+                        <a class="collapse-item" href="aspectos.html">Aspectos legales</a>
+                        <a class="collapse-item" href="procesoCodigos.html">Elaboración de códigos</a>
                     </div>
                 </div>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider my-0">
+
+            <!-- Nav Item - Dashboard -->
+            <li class="nav-item active">
+                <a class="nav-link" href="conclusiones.html">
+                    <i class=""></i>
+                    <span>Conclusiones</span></a>
             </li>
 
             <!-- Sidebar Toggler (Sidebar) -->
@@ -458,7 +466,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Legislación Informática</span>
                     </div>
                 </div>
             </footer>
@@ -474,26 +482,6 @@
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
     </a>
-
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
