--- a/leyes.html
+++ b/leyes.html
@@ -40,9 +40,8 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
-                    <i class="fas fa-tachometer-alt"></i>
-                    <span>Portada</span>
-                </a>
+                    <i class=""></i>
+                    <span>Portada</span></a>
             </li>
 
             <!-- Divider -->
@@ -55,7 +54,8 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
                     <span>Legislación Informática</span>
                 </a>
@@ -65,27 +65,39 @@
                         <a class="collapse-item" href="leyes.html">Leyes</a>
                         <a class="collapse-item" href="tramites.html">Trámites y requisitos</a>
                         <a class="collapse-item" href="proceso.html">Proceso de trámite</a>
-                        <a class="collapse-item" href="elaboracion.html">Proceso de elaboración de avisos de privacidad</a>
+                        <a class="collapse-item" href="elaboracion.html">Avisos de privacidad</a>
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+                    aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Ética y delitos informática</span>
                 </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
+                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+                    data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="utilities-color.html">Conceptos</a>
-                        <a class="collapse-item" href="utilities-border.html">Características</a>
-                        <a class="collapse-item" href="utilities-animation.html">Aspectos legales</a>
-                        <a class="collapse-item" href="utilities-other.html">Proceso de elaboración de códigos</a>
+                        <a class="collapse-item" href="definiciones.html">Conceptos</a>
+                        <a class="collapse-item" href="caracteristicas.html">Características</a>
+                        <a class="collapse-item" href="aspectos.html">Aspectos legales</a>
+                        <a class="collapse-item" href="procesoCodigos.html">Elaboración de códigos</a>
                     </div>
                 </div>
             </li>
 
+            <!-- Divider -->
+            <hr class="sidebar-divider my-0">
+
+            <!-- Nav Item - Dashboard -->
+            <li class="nav-item active">
+                <a class="nav-link" href="conclusiones.html">
+                    <i class=""></i>
+                    <span>Conclusiones</span></a>
+            </li>
+            
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
@@ -129,16 +141,14 @@
                                 <div class="card-header py-3">
                                     <h6 class="m-0 font-weight-bold text-primary text-center">DERECHOS DE AUTOR</h6>
                                 </div>
-                                <div class="card-body d-flex align-items-center">
-                                    <img class="img-fluid px-3 px-sm-4 mt-3 mb-3 mr-4" style="width: 30rem; height: 14.5rem;" src="img/ley-drechos.jpg" alt="Derechos de Autor">
-                                    <div>
+                                <div class="card-body d-flex flex-column flex-md-row align-items-center">
+                                    <img class="img-fluid mb-3 mb-md-0 mr-md-4" style="width: 100%; max-width: 30rem; height: auto;" src="img/ley-drechos.jpg" alt="Derechos de Autor">
+                                    <div class="text-center text-md-left">
                                         <p><strong>Nacionales</strong></p>
                                         <ul>
                                             <li><strong>Ley de Propiedad Intelectual:</strong> Protege los derechos de los autores sobre sus obras literarias, artísticas o científicas.</li>
                                             <li><strong>Copyright Act:</strong> Ley que regula los derechos de autor en los Estados Unidos, otorgando a los autores derechos exclusivos sobre sus obras.</li>
                                         </ul>
-                                    </div>
-                                    <div>
                                         <p><strong>Internacionales</strong></p>
                                         <ul>
                                             <li><strong>Convenio de Berna:</strong> Tratado internacional que establece la protección de las obras y los derechos de los autores en los países miembros.</li>
@@ -155,16 +165,14 @@
                                 <div class="card-header py-3">
                                     <h6 class="m-0 font-weight-bold text-primary text-center">PRIVACIDAD</h6>
                                 </div>
-                                <div class="card-body d-flex align-items-center">
-                                    <img class="img-fluid px-3 px-sm-4 mt-3 mb-3 mr-4" style="width: 30rem; height: 14.5rem;" src="img/ley-privacidad.svg" alt="Derechos de Autor">
-                                    <div>
+                                <div class="card-body d-flex flex-column flex-md-row align-items-center">
+                                    <img class="img-fluid mb-3 mb-md-0 mr-md-4" style="width: 100%; max-width: 30rem; height: auto;" src="img/ley-privacidad.svg" alt="Privacidad">
+                                    <div class="text-center text-md-left">
                                         <p><strong>Nacionales</strong></p>
                                         <ul>
                                             <li><strong>Ley Orgánica de Protección de Datos Personales y Garantía de los Derechos Digitales (LOPDGDD):</strong> Regula el tratamiento de los datos personales y garantiza los derechos digitales de los ciudadanos.</li>
                                             <li><strong>California Consumer Privacy Act (CCPA):</strong> Proporciona a los residentes de California derechos sobre sus datos personales, incluida la opción de conocer, acceder y eliminar la información que las empresas recopilan sobre ellos.</li>
                                         </ul>
-                                    </div>
-                                    <div>
                                         <p><strong>Internacionales</strong></p>
                                         <ul>
                                             <li><strong>Reglamento General de Protección de Datos (GDPR):</strong> Reglamento de la Unión Europea que establece normas sobre la protección de datos personales y la privacidad de los individuos.</li>
@@ -181,17 +189,14 @@
                                 <div class="card-header py-3">
                                     <h6 class="m-0 font-weight-bold text-primary text-center">PROTECCIÓN DE DATOS</h6>
                                 </div>
-                                <div class="card-body d-flex align-items-center">
-                                    <img class="img-fluid px-3 px-sm-4 mt-3 mb-3 mr-4" style="width: 30rem; height: 14.5rem;" src="img/ley-datos.jpg" alt="Derechos de Autor">
-                                    <div>
+                                <div class="card-body d-flex flex-column flex-md-row align-items-center">
+                                    <img class="img-fluid mb-3 mb-md-0 mr-md-4" style="width: 100%; max-width: 30rem; height: auto;" src="img/ley-datos.jpg" alt="Protección de Datos">
+                                    <div class="text-center text-md-left">
                                         <p><strong>Nacionales</strong></p>
                                         <ul>
                                             <li><strong>Ley Federal de Protección de Datos Personales en Posesión de los Particulares:</strong> Regula el tratamiento de los datos personales por parte de entidades privadas para garantizar la privacidad y el derecho a la autodeterminación informativa.</li>
-                                            <li><strong>Data Protection Act (DPA):</strong> Establece el marco legal para la protección de datos personales en el Reino Unido.
-                                            </li>
+                                            <li><strong>Data Protection Act (DPA):</strong> Establece el marco legal para la protección de datos personales en el Reino Unido.</li>
                                         </ul>
-                                    </div>
-                                    <div>
                                         <p><strong>Internacionales</strong></p>
                                         <ul>
                                             <li><strong>Privacy Shield (EE.UU.-UE):</strong> Marco para regular la protección de datos transferidos entre la Unión Europea y los Estados Unidos, aunque fue invalidado en 2020, los principios siguen siendo una referencia importante.</li>
