--- a/tramites.html
+++ b/tramites.html
@@ -40,6 +40,7 @@
         }
         .step-card ul li {
             margin-bottom: 1rem;
+            text-align: justify; /* Justificar el texto */
         }
         .step-card ul li strong {
             color: #4e73df; /* Resaltar el texto importante con el color azul */
@@ -94,7 +95,7 @@
                         <a class="collapse-item" href="leyes.html">Leyes</a>
                         <a class="collapse-item" href="tramites.html">Trámites y requisitos</a>
                         <a class="collapse-item" href="proceso.html">Proceso de trámite</a>
-                        <a class="collapse-item" href="elaboracion.html">Proceso de elaboración de avisos de privacidad</a>
+                        <a class="collapse-item" href="elaboracion.html">Avisos de privacidad</a>
                     </div>
                 </div>
             </li>
@@ -109,12 +110,22 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="utilities-color.html">Conceptos</a>
-                        <a class="collapse-item" href="utilities-border.html">Características</a>
-                        <a class="collapse-item" href="utilities-animation.html">Aspectos legales</a>
-                        <a class="collapse-item" href="utilities-other.html">Proceso de elaboración de códigos</a>
+                        <a class="collapse-item" href="definiciones.html">Conceptos</a>
+                        <a class="collapse-item" href="caracteristicas.html">Características</a>
+                        <a class="collapse-item" href="aspectos.html">Aspectos legales</a>
+                        <a class="collapse-item" href="procesoCodigos.html">Elaboración de códigos</a>
                     </div>
                 </div>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider my-0">
+
+            <!-- Nav Item - Dashboard -->
+            <li class="nav-item active">
+                <a class="nav-link" href="conclusiones.html">
+                    <i class=""></i>
+                    <span>Conclusiones</span></a>
             </li>
 
             <!-- Sidebar Toggler (Sidebar) -->
